--- a/128. Longest Consecutive Sequence.ipynb
+++ b/128. Longest Consecutive Sequence.ipynb
@@ -8,103 +8,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def longestConsecutive(self, nums) -> int:\n",
-    "        if not nums:\n",
-    "            return 0\n",
-    "\n",
-    "        hashset = set(nums) # O(N)\n",
-    "        visited = set()\n",
-    "        current_max = 0\n",
-    "        print(f\"nums: {nums}\")\n",
-    "        print(f\"hashset: {hashset}\")\n",
-    "        print(\"________________________________________________________________\")\n",
-    "\n",
-    "        for num in nums: # O(N)\n",
-    "            print(f\"num: {num}, visited: {visited}\")\n",
-    "            if num in visited: # O(1)\n",
-    "                continue\n",
-    "\n",
-    "            cnt = 1\n",
-    "            visited.add(num)\n",
-    "            high, low = num+1, num-1\n",
-    "            print(f\"high: {high}, low: {low}, hashset: {hashset}, count: {cnt}\")\n",
-    "\n",
-    "            while high in hashset:\n",
-    "                print(f\"high: {high}, hashset: {hashset}, \", end = \"\")\n",
-    "                visited.add(high)\n",
-    "                high += 1\n",
-    "                cnt += 1\n",
-    "                print(f\"count: {cnt}\")\n",
-    "\n",
-    "            while low in hashset:\n",
-    "                print(f\"low: {low}, hashset: {hashset}, \", end = \"\")\n",
-    "                visited.add(low)\n",
-    "                low -= 1\n",
-    "                cnt += 1\n",
-    "\n",
-    "                print(f\"count: {cnt}\")\n",
-    "\n",
-    "            current_max = max(current_max, cnt)\n",
-    "            \n",
-    "            print(\"________________________________________________________________\")\n",
-    "\n",
-    "        return current_max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nums: [100, 4, 200, 1, 3, 2, 201, 199, 202]\n",
-      "hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}\n",
-      "________________________________________________________________\n",
-      "num: 100, visited: set()\n",
-      "high: 101, low: 99, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 1\n",
-      "________________________________________________________________\n",
-      "num: 4, visited: {100}\n",
-      "high: 5, low: 3, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 1\n",
-      "low: 3, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 2\n",
-      "low: 2, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 3\n",
-      "low: 1, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 4\n",
-      "________________________________________________________________\n",
-      "num: 200, visited: {1, 2, 3, 100, 4}\n",
-      "high: 201, low: 199, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 1\n",
-      "high: 201, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 2\n",
-      "high: 202, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 3\n",
-      "low: 199, hashset: {1, 2, 3, 100, 4, 199, 200, 201, 202}, count: 4\n",
-      "________________________________________________________________\n",
-      "num: 1, visited: {1, 2, 3, 100, 4, 199, 200, 201, 202}\n",
-      "num: 3, visited: {1, 2, 3, 100, 4, 199, 200, 201, 202}\n",
-      "num: 2, visited: {1, 2, 3, 100, 4, 199, 200, 201, 202}\n",
-      "num: 201, visited: {1, 2, 3, 100, 4, 199, 200, 201, 202}\n",
-      "num: 199, visited: {1, 2, 3, 100, 4, 199, 200, 201, 202}\n",
-      "num: 202, visited: {1, 2, 3, 100, 4, 199, 200, 201, 202}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "nums = [100,4,200,1,3,2, 201, 199, 202]\n",
-    "Solution().longestConsecutive(nums)"
+    "**時間複雜度: O( $n$ )**  \n",
+    "**空間複雜度: O( $n$ )**"
    ]
   },
   {
@@ -113,31 +21,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def longestConsecutive(self, nums) -> int:\n",
-    "        nums = sorted(set(nums))\n",
-    "        print(nums)\n",
-    "        \n",
-    "        if len(nums) <= 1:\n",
-    "            return len(nums)\n",
+    "    def longestConsecutive(self, nums: List[int]) -> int:\n",
+    "        # 將數字轉為 set，加快查找速度\n",
+    "        num_set = set(nums) # space: O(n)\n",
+    "        max_length = 0 \n",
+    "        print(f\"{num_set=}\")\n",
     "\n",
-    "        start = nums[0]\n",
-    "        count = 1\n",
-    "        max_count = 1\n",
+    "        for num in num_set: # time: O(n)\n",
+    "            print(f\"\\nchecking {num=}\")\n",
     "\n",
-    "        for i in nums[1:]:\n",
-    "            print(f\"\\ninit: num = {i}, start: {start}, count = {count}, max_count = {max_count}\")\n",
-    "            if (start + 1) == i:\n",
-    "                count += 1\n",
-    "                start = i\n",
-    "                max_count = max(max_count, count)\n",
-    "            else:\n",
-    "                start = i\n",
-    "                count = 1\n",
-    "            \n",
-    "            print(f\"new: num = {i}, start: {start}, count = {count}, max_count = {max_count}\")\n",
-    "    \n",
-    "        return max_count"
+    "            # 只從序列起點開始找（前一個數不在 set 中，代表中間斷掉，重新計算）\n",
+    "            if (num - 1) not in num_set:\n",
+    "                current_num = num # 當前數字\n",
+    "                current_length = 1 # 當前序列長度\n",
+    "                print(f\"{num - 1} not in {num_set=}\")\n",
+    "                print(f\"starting new sequence with {current_num=}, {current_length=}\")\n",
+    "\n",
+    "                # 往後找連續的數字\n",
+    "                # 只要當前數字 + 1 在 set 中，就繼續往下找\n",
+    "                # 否則就結束當前序列\n",
+    "                while current_num + 1 in num_set:\n",
+    "                    current_num += 1\n",
+    "                    current_length += 1\n",
+    "                    print(f\"{current_num} in {num_set=}\")\n",
+    "                    print(f\"continuing sequence with {current_num=}, {current_length=}\")\n",
+    "\n",
+    "                # 更新最大序列長度\n",
+    "                max_length = max(max_length, current_length)\n",
+    "                print(f\"max_length updated to {max_length=}\")\n",
+    "\n",
+    "        return max_length\n"
    ]
   },
   {
@@ -149,22 +65,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 100, 200]\n",
+      "num_set={1, 2, 3, 100, 4, 200}\n",
       "\n",
-      "init: num = 2, start: 1, count = 1, max_count = 1\n",
-      "new: num = 2, start: 2, count = 2, max_count = 2\n",
+      "checking num=1\n",
+      "0 not in num_set={1, 2, 3, 100, 4, 200}\n",
+      "starting new sequence with current_num=1, current_length=1\n",
+      "2 in num_set={1, 2, 3, 100, 4, 200}\n",
+      "continuing sequence with current_num=2, current_length=2\n",
+      "3 in num_set={1, 2, 3, 100, 4, 200}\n",
+      "continuing sequence with current_num=3, current_length=3\n",
+      "4 in num_set={1, 2, 3, 100, 4, 200}\n",
+      "continuing sequence with current_num=4, current_length=4\n",
+      "max_length updated to max_length=4\n",
       "\n",
-      "init: num = 3, start: 2, count = 2, max_count = 2\n",
-      "new: num = 3, start: 3, count = 3, max_count = 3\n",
+      "checking num=2\n",
       "\n",
-      "init: num = 4, start: 3, count = 3, max_count = 3\n",
-      "new: num = 4, start: 4, count = 4, max_count = 4\n",
+      "checking num=3\n",
       "\n",
-      "init: num = 100, start: 4, count = 4, max_count = 4\n",
-      "new: num = 100, start: 100, count = 1, max_count = 4\n",
+      "checking num=100\n",
+      "99 not in num_set={1, 2, 3, 100, 4, 200}\n",
+      "starting new sequence with current_num=100, current_length=1\n",
+      "max_length updated to max_length=4\n",
       "\n",
-      "init: num = 200, start: 100, count = 1, max_count = 4\n",
-      "new: num = 200, start: 200, count = 1, max_count = 4\n"
+      "checking num=4\n",
+      "\n",
+      "checking num=200\n",
+      "199 not in num_set={1, 2, 3, 100, 4, 200}\n",
+      "starting new sequence with current_num=200, current_length=1\n",
+      "max_length updated to max_length=4\n"
      ]
     },
     {
@@ -200,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4,
   "vscode": {
