--- a/128. Longest Consecutive Sequence.ipynb
+++ b/128. Longest Consecutive Sequence.ipynb
@@ -11,13 +11,151 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Hash Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O( $n$ )**  \n",
+    "**空間複雜度: O( $n$ )**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "邊界合併法在實務上可能略快於 Set 起點法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "class Solution:\n",
+    "    def longestConsecutive(self, nums: List[int]) -> int:\n",
+    "        length_map = defaultdict(int) # space: O(n)\n",
+    "        max_length = 0\n",
+    "\n",
+    "        for num in nums: # time: O(n)\n",
+    "            # 如果 num 不在 num_dict\n",
+    "            if not length_map[num]:\n",
+    "                # 插入新數字 num ， 並合併相鄰的左右區間\n",
+    "                print(f\"Processing number: {num}\")\n",
+    "                print(f\"num_dict[{num}] = (num_dict[{num - 1}] = {length_map[num - 1]}) + 1 + (num_dict[{num + 1}] = {length_map[num + 1]})\")\n",
+    "                length_map[num] = length_map[num - 1] + 1 + length_map[num + 1]\n",
+    "\n",
+    "                # 獲取左右區間的長度\n",
+    "                left_gap = length_map[num - 1]\n",
+    "                right_gap = length_map[num + 1]\n",
+    "                print(f\"left_gap = {left_gap}, right_gap = {right_gap}\")\n",
+    "\n",
+    "                # 更新左右邊界的長度，不須更新中間區間，因為不會再被訪問\n",
+    "                length_map[num - left_gap] = length_map[num]\n",
+    "                length_map[num + right_gap] = length_map[num]\n",
+    "                print(f\"left board:  num_dict[{num} - {left_gap}] = num_dict[{num - left_gap}] = {length_map[num]}\")\n",
+    "                print(f\"right borad: num_dict[{num} + {right_gap}] = num_dict[{num + right_gap}] = {length_map[num]}\")\n",
+    "\n",
+    "                # 更新最大長度\n",
+    "                max_length = max(max_length, length_map[num])\n",
+    "                print(f\"max_length = {max_length}\")\n",
+    "                print(f\"num_dict = {dict(length_map)}\\n\")\n",
+    "\n",
+    "        return max_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing number: 1\n",
+      "num_dict[1] = (num_dict[0] = 0) + 1 + (num_dict[2] = 0)\n",
+      "left_gap = 0, right_gap = 0\n",
+      "left board:  num_dict[1 - 0] = num_dict[1] = 1\n",
+      "right borad: num_dict[1 + 0] = num_dict[1] = 1\n",
+      "max_length = 1\n",
+      "num_dict = {1: 1, 0: 0, 2: 0}\n",
+      "\n",
+      "Processing number: 4\n",
+      "num_dict[4] = (num_dict[3] = 0) + 1 + (num_dict[5] = 0)\n",
+      "left_gap = 0, right_gap = 0\n",
+      "left board:  num_dict[4 - 0] = num_dict[4] = 1\n",
+      "right borad: num_dict[4 + 0] = num_dict[4] = 1\n",
+      "max_length = 1\n",
+      "num_dict = {1: 1, 0: 0, 2: 0, 4: 1, 3: 0, 5: 0}\n",
+      "\n",
+      "Processing number: 3\n",
+      "num_dict[3] = (num_dict[2] = 0) + 1 + (num_dict[4] = 1)\n",
+      "left_gap = 0, right_gap = 1\n",
+      "left board:  num_dict[3 - 0] = num_dict[3] = 2\n",
+      "right borad: num_dict[3 + 1] = num_dict[4] = 2\n",
+      "max_length = 2\n",
+      "num_dict = {1: 1, 0: 0, 2: 0, 4: 2, 3: 2, 5: 0}\n",
+      "\n",
+      "Processing number: 5\n",
+      "num_dict[5] = (num_dict[4] = 2) + 1 + (num_dict[6] = 0)\n",
+      "left_gap = 2, right_gap = 0\n",
+      "left board:  num_dict[5 - 2] = num_dict[3] = 3\n",
+      "right borad: num_dict[5 + 0] = num_dict[5] = 3\n",
+      "max_length = 3\n",
+      "num_dict = {1: 1, 0: 0, 2: 0, 4: 2, 3: 3, 5: 3, 6: 0}\n",
+      "\n",
+      "Processing number: 2\n",
+      "num_dict[2] = (num_dict[1] = 1) + 1 + (num_dict[3] = 3)\n",
+      "left_gap = 1, right_gap = 3\n",
+      "left board:  num_dict[2 - 1] = num_dict[1] = 5\n",
+      "right borad: num_dict[2 + 3] = num_dict[5] = 5\n",
+      "max_length = 5\n",
+      "num_dict = {1: 5, 0: 0, 2: 5, 4: 2, 3: 3, 5: 5, 6: 0}\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1, 4, 3, 5, 2]\n",
+    "# nums = [100,4,200,1,3,2]\n",
+    "Solution().longestConsecutive(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hash Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**時間複雜度: O( $n$ )**  \n",
     "**空間複雜度: O( $n$ )**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +239,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
